# video2slides

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  index.html  pyproject.toml
docs/: AGENTS.md  cuepoint-spec-v0.5.md  spec-axis-ab-category-prior.md  spec-cross-agent-portability.md  test-videos.md  video2slides-spec-v0.5.md
docs/adr/: 0001-open-source-release.md
ferrari/: index.html
mbs/: index.html
nlp/: index.html
schemas/: video_index.schema.json
scripts/: AGENTS.md  common.py  fetch.py  frames.py  funasr_runner.py  notes.py  setup.py  signals.py  storyboard.py  transcribe.py  vision_probe.py
tests/: AGENTS.md  conftest.py  test_common.py  test_fetch.py  test_frames.py  test_funasr_runner.py  test_notes.py  test_setup.py  test_signals.py  test_storyboard.py  test_transcribe.py  test_vision_probe.py
tests/fixtures/: asr_chat_resp.json  asr_verbose_json.json  sample.srt  sample.vtt  scene_metadata.txt  sidecar_wechat.json  silencedetect.txt  ytdlp_info_bilibili.json  ytdlp_info_youtube.json
token/: index.html
