[project]
name = "video2slide"
version = "0.1.0"
description = "video2slides:把在线视频转为 frontend-slides HTML 导航索引的 Claude Code skill(开发仓)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2026.7.4",
]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
